AndroidwebView added for file download

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,8 +102,8 @@ android {
         applicationId "com.parentconnect"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "1.05"
+        versionCode 7
+        versionName "1.06"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-webview-file-upload-android')
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
       transitive = true
       }
