--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,16 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 28
+                buildToolsVersion '28.0.0'
+            }
+        }
+    }
+}
 
 allprojects {
     repositories {
