--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-popup-dialog": "^0.15.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^6.0.2",
+    "react-native-webview-file-upload-android": "^1.1.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
